--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "nodemon": "^3.1.6",
     "postcss": "^8.4.47",
     "postcss-cli": "^11.0.0",
-    "sass": "^1.79.1"
+    "sass": "1.77.6"
   },
   "browserslist": [
     "defaults"
